--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = keychron-qmk
 	url = https://github.com/Keychron/qmk_firmware
 	branch = bluetooth_playground
+[submodule "qmk_mk47"]
+	path = qmk_mk47
+	url = https://github.com/jonylee1986/qmk_firmware_master
+	branch = hfdkb
