--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,10 @@
 	path = qmk_mk47
 	url = https://github.com/jonylee1986/qmk_firmware_master
 	branch = hfdkb
+[submodule "hfdkb"]
+	path = hfdkb
+	url = https://github.com/jonylee1986/qmk_firmware_master
+	branch = hfdkb
+[submodule "qmk_master"]
+	path = qmk_master
+	url = https://github.com/qmk/qmk_firmware
