--- a/.gitmodules
+++ b/.gitmodules
@@ -5,8 +5,4 @@
     ignore = dirty
 [submodule "qmk_mk47"]
 	path = qmk_mk47
-	url = https://github.com/jonylee1986/qmk_firmware_master
-	branch = hfdkb
-[submodule "qmk_master"]
-	path = qmk_master
-	url = https://github.com/qmk/qmk_firmware
+	url = https://github.com/apedley/qmkmk47
