--- a/.gitmodules
+++ b/.gitmodules
@@ -4,5 +4,5 @@
 	branch = bluetooth_playground
     ignore = dirty
 [submodule "qmk_mk47"]
-	path = qmk_mk47
+	path = qmk
 	url = https://github.com/apedley/qmkmk47
