try this keychron qmk

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "keychron-qmk"]
 	path = keychron-qmk
-	url = https://github.com/Keychron/qmk_firmware
+	url = git@github.com:apedley/qmk_firmware.git
 	branch = bluetooth_playground
   ignore = dirty
 [submodule "qmk_mk47"]
