--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ compile_commands.json
 
 # VIA(L) json files that don't belong in QMK repo
 via*.json
+src/qmk/keyboards/.vscode/c_cpp_properties.json
