--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ compile_commands.json
 # VIA(L) json files that don't belong in QMK repo
 via*.json
 src/qmk/keyboards/.vscode/c_cpp_properties.json
+src/.vscode/settings.json
